[tool.poetry]
name = "estrutura-projetos-dados"
version = "0.1.0"
description = ""
authors = ["Claudio Pontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.13"
pymdown-extensions = "^10.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort . && blue ."
run = "python app/main.py"
kill = "kill -9 $(lsof -t -i :8000)"
